@@ -126,7 +126,8 @@ xymon (4.4.0-alpha5) unstable; urgency=low
      - only flush peer queues of expired messages every few seconds instead of
        re-walking the queue for every message that comes in
    * xymond now allocates a persistent buffer in memory for preparing a channel message   
-
+   * Extend the legacy BB "client message as status" syntax to allow for specifying
+     the server OS and client class
 
  -- Henrik Stoerner <henrik@hswn.dk>  Sun, 22 Nov 2015 18:26:21 +0100
 
