@@ -124,7 +124,8 @@ Changes from 4.3.x -> 4.4-alpha
   - only flush peer queues of expired messages every few seconds instead of
     re-walking the queue for every message that comes in
 * xymond now allocates a persistent buffer in memory for preparing a channel message
-
+* Extend the legacy BB "client message as status" syntax to allow for specifying
+  the server OS and client class
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
 ===========================================
